<resources>
    <string name="app_name">BookTrade</string>
    <string name="button_login">LOG IN</string>
    <string name="button_register">REGISTER</string>
    <string name="button_logout">LOG OUT</string>
    <string name="button_delete_account">DELETE ACCOUNT</string>
    <string name="button_edit_profile_picture">CHANGE PHOTO</string>
    <string name="button_history">HISTORY</string>
    <string name="button_add_book">ADD BOOK</string>
    <string name="button_search_books">SEARCH BOOKS</string>
    <string name="button_trade_requests">TRADE REQUESTS</string>
    <string name="button_search_users">SEARCH USERS</string>
    <string name="button_add_friend">ADD FRIEND</string>
    <string name="button_friend_request_requested">REQUESTED</string>
    <string name="button_friend_added">FRIEND ADDED</string>
    <string name="button_choose_profile_picture">CHOOSE PICTURE</string>
    <string name="button_save_changes">SAVE CHANGES</string>
    <string name="button_friends">FRIENDS</string>
    <string name="button_friend_requests">FRIEND REQUESTS</string>
    <string name="button_friend_request_received">REQUEST RECEIVED</string>
    <string name="author_name">by Hang Bui\nhangbui_2024@depauw.edu</string>
    <string name="author_email">hangbui_2024@depauw.edu</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_book_nane">Book Name</string>
    <string name="hint_book_authors">Authors</string>
    <string name="hint_book_description">Description</string>
    <string name="hint_university">University</string>
    <string name="hint_name">Name</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_only_show_friends_book">Only show books owned by friends</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_profile">Profile</string>
    <string name="nav_bar_books">Books</string>
    <string name="nav_bar_community">Community</string>
    <string name="message_no_trade_requests">No trade requests found.</string>
    <string name="message_no_friend_requests">No friend requests found.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
