<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/nav_bar_home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/nav_bar_profile"
        android:icon="@drawable/baseline_account_circle_24"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/nav_bar_books"
        android:icon="@drawable/baseline_book_24"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/nav_bar_settings"
        android:icon="@drawable/baseline_settings_24"/>
</menu>